Corrected table css to be able to scroll all the way to the left when veiwing on mobile size screen.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ header {
 /* Table styling */
 #table-container {
    display: flex;   
-   justify-content: center;
+   justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
    height: 100%;
